--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "java.project.sourcePaths": [
         "codeforces",
         "TLE",
-        "Contest"
+        "Contest",
+        "leetcode"
     ],
     "java.project.referencedLibraries": []
 }
