--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "Contest",
         "leetcode",
         "assignment_CP",
-        "geeksforgeeks"
+        "geeksforgeeks",
+        "cracking_the_coding"
     ],
     "java.project.referencedLibraries": []
 }
