prefix_sum_Queries

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Contest",
         "cracking_the_coding",
         "geeksforgeeks",
+        "HackerEarth",
         "leetcode",
         "TLE"
     ],
