--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
         "geeksforgeeks",
         "HackerEarth",
         "leetcode",
-        "TLE"
+        "TLE",
+        "CSES"
     ],
     "java.project.referencedLibraries": []
 }
