--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,21 @@
         "iostream": "cpp",
         "ostream": "cpp",
         "vector": "cpp",
-        "cstring": "cpp"
+        "cstring": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "array": "cpp",
+        "bitset": "cpp",
+        "deque": "cpp",
+        "initializer_list": "cpp",
+        "map": "cpp",
+        "queue": "cpp",
+        "set": "cpp",
+        "stack": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "unordered_map": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
